Fix hasDoubleEdge. Add arrows to export an import titles

--- a/src/components/DrawGraph/DrawGraph.css
+++ b/src/components/DrawGraph/DrawGraph.css
@@ -57,7 +57,7 @@
   background-color: #dbe2ef;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   color: #384259;
-  font-size: 1vw;
+  font-size: 0.84vw;
 }
 .instructions h2 {
   text-align: center;
@@ -172,7 +172,7 @@
   margin-top: -0.2rem;
 }
 
-/* Input / Output grid functionality  */
+/* Input / Output grid css  */
 .import-export {
   margin: 0 10px 0 20px;
   display: grid;
@@ -180,20 +180,35 @@
   height: 500px;
   box-sizing: border-box;
 }
-.import-export h2 {
+/* .import-export h2 {
   background-color: #112d4e;
   margin: 0;
   cursor: pointer;
   font-size: 1rem;
   padding: 0.3rem;
-}
-.export-name {
-  border-radius: 5px 5px 0 0;
-  border: none;
-  border-bottom: solid #3f72af 1px;
-}
+} */
+.export-name,
 .import-name {
-  border-radius: 0 0 5px 5px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  background-color: #112d4e;
+  padding: 0 0.5rem;
+  font-size: 0.7rem;
+  border-radius: 5px 5px 0 0;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.export-name h2 {
+  flex-grow: 1;
+  margin: 0;
+}
+.import-name h2 {
+  flex-grow: 1;
+  margin: 0;
 }
 @keyframes dropMenu {
   from {
@@ -209,7 +224,6 @@
   animation-name: dropMenu;
   animation-duration: 0.5s;
   animation-timing-function: ease-out;
-  border-radius: 5px;
 }
 
 .export-box {
@@ -219,12 +233,11 @@
   animation-name: dropMenu;
   animation-duration: 0.4s;
   animation-timing-function: ease-out;
-  border-radius: 5px;
 }
 .import-button {
   background-color: #afc2e0;
   color: black;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
   padding: 0.35rem 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   cursor: pointer;
